# Ropes

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  commands.txt  final_nvim.py  lel.py  main.c  rope.c  rope.h  ropes.c  ropes.h  todo.md
.ccls-cache/@@root@sarvesh@Ropes/: @usr@include@alloca.h.blob  @usr@include@c++@11@bits@std_abs.h.blob  @usr@include@c++@11@cstdlib.blob  @usr@include@c++@11@stdlib.h.blob  @usr@include@endian.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@x86_64-linux-gnu@bits@atomic_wide_counter.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes-arch.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes.h.blob  @usr@include@x86_64-linux-gnu@bits@select.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-intn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdio_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@stdlib-float.h.blob  @usr@include@x86_64-linux-gnu@bits@struct_mutex.h.blob  @usr@include@x86_64-linux-gnu@bits@struct_rwlock.h.blob  (+36 more)
lib/: main.c  sock.sh
(+6 files in other folders)
